objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Future Release</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
        <values>
            <fullName>Pending Fix</fullName>
        </values>
        <values>
            <fullName>Waiting on User</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Assigned_On__c</fullName>
        <description>captures the date on when the case has been assigned to a resource</description>
        <label>Assigned On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Status__c</fullName>
        <description>captures the information if the case is assigned to a resource or not</description>
        <label>Assigned Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Deployement_log_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Build/Deployement log Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Log_in_Path__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Build Log in Path</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Closed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Case Closed By)</relationshipLabel>
        <relationshipName>CCBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CI_Build__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI_Build</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI_Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_Job_Name__c</fullName>
        <label>CI Job Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Jobs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Customer Support Survey</description>
        <label>CI Jobs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case1Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case1Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseType__c</fullName>
        <defaultValue>&quot;Web&quot;</defaultValue>
        <label>CaseType</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Formula__c</fullName>
        <formula>&apos;1. Issue Related To =&apos;+&apos;Build:&apos;+ IF( 
CI_Build__c = True, 
&apos;Yes&apos; ,&apos;No&apos;)
+&quot;.&quot;+&apos;Deployment:&apos;+
IF( 
CI_Deployment__c= True, 
&apos;Yes&apos; ,&apos;No&apos;)
+BR()+
&apos;2. Checked Build/Deployment logs in UI:&apos;+
IF( 
Build_Deployement_log_Check__c= True, 
&apos;Yes&apos; ,&apos;No&apos;)
+BR()+
&apos;3. Any Error in Step 2:&apos;+
IF( 
Error_In_Step_2_Check__c= True, 
&apos;Yes&apos; ,&apos;No&apos;)
+&quot;.&quot;+
&apos;Error : &apos; +
Step_2_Url__c
+BR()+
&apos;4. Any Error in Rabitcs.log:&apos;+IF( 
Error_in_rabics_log_check__c= True, 
&apos;Yes&apos; ,&apos;No&apos;)
+&quot;.&quot;+
&apos;Error :&apos; +
case1_Text__c
+BR()+
&apos;5. Error in Step 3 and 4 is User Related: &apos; +
IF( 
Step_3_4_Related_Chek__c= True, 
&apos;Yes&apos; ,&apos;No&apos;)
+BR()+
&apos;6. Error in Step 3 and 4 is AR Related: &apos; +
IF( 
X3_4_AR_Related_check__c= True, 
&apos;Yes&apos; ,&apos;No&apos;)
+BR()+
&apos;7. Check Build log in Path: &apos; +
IF( 
Build_Log_in_Path__c= True, 
&apos;Yes&apos; ,&apos;No&apos;)
+BR()+
&apos;8. Check Deployment log in Path: &apos; +
IF( 
Deployment_log_in_path__c= True, 
&apos;Yes&apos; ,&apos;No&apos;)
+BR()+
&apos;9. Check Catalina in Path: &apos; +
IF( 
Catalina_log_path_check__c= True, 
&apos;Yes&apos; ,&apos;No&apos;)
+BR()+ 
&apos;10. Check CRUISCONTROL Path: &apos; +
IF( 
CruisControl_Path_Check__c= True, 
&apos;Yes&apos; ,&apos;No&apos;)
+BR()+
&apos;11. Any Other Details:&apos; +
Other_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Analysis Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalina_log_path_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catalina log path check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closure_Days__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;Closed&quot;),(ClosedDate-CreatedDate),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closure Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_C_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>captures the information if there is a code change required or not.</description>
        <label>Code Change Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commit_Number__c</fullName>
        <label>Commit Revision Number</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contactfromcase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contactfromcase</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Contactfromcase)</relationshipLabel>
        <relationshipName>Contactfromcase1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creating_metadata_connection__c</fullName>
        <label>Creating metadata connection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CruisControl_Path_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CruisControl Path Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Loader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Customer Support Survey</description>
        <label>Data Loader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depl_AR_Error_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Depl AR Error Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depl_AR_Error__c</fullName>
        <label>Depl AR Error</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depl_Salesforce_Error_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Depl Salesforce Error Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depl_Salesforce_Error__c</fullName>
        <label>Depl Salesforce Error</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Destination__c</fullName>
        <label>Deployment Destination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Label__c</fullName>
        <label>Deployment Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_log_in_path__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployment log in path</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Customer Support Survey</description>
        <label>Deployments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deplyoment_Source__c</fullName>
        <label>Deplyoment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EZ_Adding_new_files__c</fullName>
        <label>EZ Adding new files</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZ_Commit_Process__c</fullName>
        <label>EZ Commit Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZ_Commits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Customer Support Survey</description>
        <label>EZ Commits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EZ_Creating_version_control__c</fullName>
        <label>EZ Creating version control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZ_Deleted_destructive__c</fullName>
        <label>EZ Deleted destructive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZ_Deleting_destructive__c</fullName>
        <label>EZ Deleting destructive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZ_Preparing_destructive__c</fullName>
        <label>EZ Preparing destructive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZ_Preparing_package__c</fullName>
        <label>EZ Preparing package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZ_SCM_working_copy__c</fullName>
        <label>EZ SCM working copy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZ_Valdating_version_control__c</fullName>
        <label>EZ Valdating version control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZ_Working_Copy_Not_Exists__c</fullName>
        <label>EZ Working Copy Not Exists</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZ_Working_copy__c</fullName>
        <label>EZ Working copy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_In_Step_2_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error In Step 2 Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_in_rabics_log_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error in rabics.log check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Resolution__c</fullName>
        <label>Final Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Configuration Fix</fullName>
                </value>
                <value>
                    <fullName>Duplicate/Invalid</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Knowledge Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Often__c</fullName>
        <description>Created for Customer Support Survey</description>
        <label>How Often</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <label>Instance</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L1Eng__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L1 Engineer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (L1 Engineer)</relationshipLabel>
        <relationshipName>L1Eng</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2Eng__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L2 Engineer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (L2 Engineer)</relationshipLabel>
        <relationshipName>L2Eng</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L3Eng__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L3 Engineer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (L3 Engineer)</relationshipLabel>
        <relationshipName>L3Eng</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Login_Url__c</fullName>
        <description>This captures the AR instance used by User.</description>
        <externalId>true</externalId>
        <inlineHelpText>Please Enter your AutoRABIT Login URL</inlineHelpText>
        <label>Login Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_A_Assignment__c</fullName>
        <formula>IF( ISPICKVAL(Assigned_Status__c, &quot;Yes&quot;) ,( IF(ISPICKVAL(Status, &quot;In Progress&quot;), TODAY() - DATEVALUE(Assigned_On__c), IF(ISPICKVAL(Status, &quot;Closed&quot;), (ClosedDate-Assigned_On__c),0) )),0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open After Assignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Since__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Status, &quot;Closed&quot;)), TODAY() - DATEVALUE(CreatedDate) , ClosedDate-CreatedDate )</formula>
        <label>Open Since</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <label>Org Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <label>Other Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preparing_package__c</fullName>
        <label>Preparing package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_the_userId_changes__c</fullName>
        <label>Processing the userId  Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (QA Agent)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <formula>(Source:EmailMessage.ThreadIdentifier)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remdine_Case_No__c</fullName>
        <description>This captures the redmine case number created for the respective case.</description>
        <label>JIRA Case No</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reproduce_Issue__c</fullName>
        <label>Reproduce Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Text__c</fullName>
        <description>captures the information of the interactions had with user and also if any steps provided to test by user</description>
        <label>Solution Steps</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_2_Url__c</fullName>
        <label>Step 2 Url</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_3_4_Related_Chek__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 3&amp;4 Related Chek</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suggestions__c</fullName>
        <description>Clients Suggestions on Support</description>
        <label>Suggestions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Engineer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Support Engineer)</relationshipLabel>
        <relationshipName>contact1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Rating__c</fullName>
        <description>Created for Customer Support Survey</description>
        <label>Support Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Highly Satisfied</fullName>
                </value>
                <value>
                    <fullName>Moderately Satisfied</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Shift_Type__c</fullName>
        <formula>(CASE(VALUE(MID(TEXT(CreatedDate),12,2)),
0, &quot;Night&quot;,
1,&quot;Night&quot;,
2,&quot;Day&quot;,
3,&quot;Day&quot;,
4,&quot;Day&quot;,
5,&quot;Day&quot;,
6,&quot;Day&quot;,
7,&quot;Day&quot;,
8,&quot;Day&quot;,
9,&quot;Day&quot;,
10,&quot;Day&quot;,
11,&quot;Day&quot;,
12,&quot;Day&quot;,
13,&quot;Day&quot;,
14,&quot;Day&quot;,
15,&quot;Day&quot;,
16,&quot;Day&quot;,
17,&quot;Night&quot;,
18,&quot;Night&quot;,
19,&quot;Night&quot;,
20,&quot;Night&quot;,
21,&quot;Night&quot;,
22,&quot;Night&quot;,
23,&quot;Night&quot;,
&quot;The formula did not calculate correctly. please inform the system admin.&quot;))</formula>
        <label>Support Shift Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Customer Support Survey</description>
        <label>TAF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TToCase__c</fullName>
        <formula>(TsbL1__c+TsbL2__c+TsbL3__c)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time on Case in Hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TsbL1__c</fullName>
        <label>Time Spent by L1</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TsbL2__c</fullName>
        <label>Time Spent by L2</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TsbL3__c</fullName>
        <label>Time Spent by L3</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Rating__c</fullName>
        <description>Created for Customer Support Survey</description>
        <label>User Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Not Good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3_4_AR_Related_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3 &amp;4 AR Related check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>case1_Text__c</fullName>
        <label>case1 Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AIB_Ben_Issues</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.NAME</field>
            <operation>equals</operation>
            <value>Ben Aird</value>
        </filters>
        <label>AIB Ben Issues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Closure_Days__c</columns>
        <columns>CASES.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deployment_Team_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.REASON</field>
            <operation>equals</operation>
            <value>Builds/Project Failures,Deployments,Sync Orgs</value>
        </filters>
        <label>Deployment Team</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.COMPANY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Assigned_To__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Support_Engineer__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Cases</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Internal_Bug</fullName>
        <active>true</active>
        <businessProcess>Customer Support</businessProcess>
        <label>Internal Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>Problem</fullName>
        <active>true</active>
        <businessProcess>Customer Support</businessProcess>
        <label>Problem</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Story</fullName>
        <active>true</active>
        <businessProcess>Customer Support</businessProcess>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>